<resources>
    <string name="app_name">FuzionAI</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help_and_feedback">Help &amp; Feedback </string>
    <string name="menu_about">About</string>
    <string name="menu_logout">Logout</string>

    <string name="fuzion_ai_logo">FuzionAI Logo</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="new_user_register_here">New user? Register here</string>
    <string name="already_registered_login_here">Already registered? Login here</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Signup</string>
    <string name="search">Search</string>
    <string name="save">Save</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="state_ut">State / UT</string>
    <string name="gender">Gender</string>

    <string-array name="states">
        <item>-- Select State -- </item>
        <item>Andaman &amp; Nicobar Islands</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chandigarh</item>
        <item>Chhatisgarh</item>
        <item>Dadra &amp; Nagar Haveli &amp; Daman &amp; Diu</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu &amp; Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Ladakh</item>
        <item>Lakshdweep</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Odisha</item>
        <item>Puducherry</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttarakhand</item>
        <item>Uttar Pradesh</item>
        <item>West Bengal</item>
    </string-array>
</resources>